@@ -2051,6 +2051,7 @@ COB_EXPIMP void cob_unstring_finish	(void);
 
 COB_EXPIMP void		cob_move	(cob_field *, cob_field *);
 COB_EXPIMP void		cob_move_ibm	(void *, void *, const int);
+COB_EXPIMP void		cob_init_table	(void *, unsigned long, long);
 COB_EXPIMP void		cob_set_int	(cob_field *, const int);
 COB_EXPIMP int		cob_get_int	(cob_field *);
 COB_EXPIMP void		cob_set_llint   (cob_field *, cob_s64_t, cob_s64_t);
