@@ -1,4 +1,11 @@
 
+2020-11-23  Ron Norman <rjn@inglenet.com>
+
+	* codegen.c: Generated code for INITIALIZE enhanced to emit progressive
+			'memcpy' to speed up the process
+			If size is not know until run time then emit call to
+			cob_init_table
+
 2020-11-18  Ron Norman <rjn@inglenet.com>
 
 	* codegen.c,typeck.c: Generated code for INITIALIZE computes the actual
